--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <div id="btnContainer">
             <button id="contactsInfo1" onclick="window.location.href='https://www.linkedin.com/in/quinn-carr-80a172272/';">LinkedIn</button>
             <button id="contactsInfo2" onclick="changeBtnText()">Gmail</button>
+            <p id="contactText">Contact me via LinkedIn or Email :)</p>
             </div>
             <div class="whiteBorder2" style="left: 2%;"></div>
             <div class="whiteBorder2" style="left: 98%;"></div>
         </div>
 
     </body>
-
